--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpasyncclient</artifactId>
-                <version>4.1.2-ctrip.1</version>
+                <version>4.1.2</version>
             </dependency>
             <!--module-->
             <dependency>
